# sam2-voice

./: .env.example  .gitignore  DETAILED_EXECUTION_PLAN.md  EXECUTION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INVESTIGATION_FINDINGS.md  PRODUCTION_READINESS_SUMMARY.md  PRODUCTION_REVIEW.md  QUICK_START_IMPLEMENTATION.md  README.md  REPOSITORY_STATE.md  TECHNICAL_REFERENCE.md  TESTING_DYNAMIC_CONTEXT.md  TESTING_GUIDE.md  VIEW_MEMORY_DATA.md  WEAVE_REDIS_ANALYSIS.md  WEAVE_REDIS_SEPARATION.md  competitive_analysis.md  implementation_plan.md  initialplan.md  main.py  pyproject.toml
agents/: __init__.py  aba_agent.py  emotional_agent.py  feedback_loop_agent.py  main_agent.py  progress_agent.py  task_agent.py
config/prompts/: aba_agent.md  aba_agent.txt  emotional_agent.md  emotional_agent.txt  feedback_loop.md  feedback_loop.txt  main_agent.md  main_agent.txt  task_agent.md  task_agent.txt
eval/: __init__.py  dataset.py  model.py  run_eval.py  scorers.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
memory/: __init__.py  debug.py  embeddings.py  errors.py  health.py  logger.py  redis_memory.py  reflection.py  retry.py  user_profile.py  validators.py
observability/: __init__.py  scorers.py  session_tracker.py
scripts/: debug_memory.py  health_check.py  view_redis_data.sh
state/: __init__.py  context.py  session.py
tests/: conftest_memory.py  test_dynamic_context.py  test_dynamic_context_audio.py  test_dynamic_context_standalone.py  test_frontend_backend_connection.py  test_gemini_live_client.py  test_memory_production.py  test_memory_system.py  test_redis_connection.py  test_redis_vector_search.py  test_voice_bot.py
utils/: __init__.py  config.py
voice/: __init__.py  agent_bridge.py  audio.py  bot.py  gemini_live.py  handlers.py  pipeline.py
web/: app.py
web/static/: app.js  browser_audio.html  calm_ui.html  index.html  memory_test.html  styles.css
