[project]
name = "sam2-voice"
version = "0.1.0"
description = "Self-improving voice agent for Autism/ADHD support using Gemini Live API"
requires-python = ">=3.10"
dependencies = [
    # Gemini Live API
    "google-genai>=1.0.0",            # Google GenAI SDK with Live API support

    # Agent Framework
    "google-adk>=0.1.0",              # Google Agent Development Kit

    # Audio handling
    "pyaudio>=0.2.14",                # Local audio capture/playback
    "numpy>=1.24.0",                  # Audio processing

    # WebRTC (optional - for browser-based audio)
    "aiortc>=1.6.0",                  # WebRTC for Python
    "aiohttp>=3.9.0",                 # Async HTTP server

    # Observability
    "weave",                          # W&B Weave

    # Utilities
    "python-dotenv",
    "pyyaml",
    "websockets>=12.0",               # WebSocket client
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
