[project]
name = "sam2-voice"
version = "0.1.0"
description = "Self-improving voice agent for Autism/ADHD support using Gemini Live API"
requires-python = ">=3.10"
dependencies = [
    # Gemini Live API
    "google-genai>=1.0.0",            # Google GenAI SDK with Live API support

    # Agent Framework
    "google-adk>=0.1.0",              # Google Agent Development Kit

    # Audio handling
    "sounddevice>=0.4.6",             # Local audio capture/playback (easier than pyaudio)
    "numpy>=1.24.0",                  # Audio processing

    # WebRTC (optional - for browser-based audio)
    "aiortc>=1.6.0",                  # WebRTC for Python
    "aiohttp>=3.9.0",                 # Async HTTP server

    # Observability
    "weave",                          # W&B Weave

    # Utilities
    "python-dotenv",
    "pyyaml",
    "websockets>=12.0",               # WebSocket client
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
web = ["fastapi", "uvicorn[standard]"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["voice*", "agents*", "state*", "utils*"]
exclude = ["config*", "data*", "tests*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.yaml"]
